# GPSBabel

./: CMakeLists.txt  GPSBabelConfig.cmake.in
include/: BabelExport.h  arcdist.h  bend.h  defs.h  discard.h  exif.h  filter.h  format.h  garmin.h  garmin_fit.h  garmin_fs.h  garmin_gpi.h  garmin_txt.h  gbversion.h  gdb.h  geo.h  geojson.h  googletakeout.h  gpx.h  gtm.h  gtrnctr.h  height.h  html.h  humminbird.h  igc.h  kml.h  lowranceusr.h  main.h  mkshort.h  nmea.h  osm.h  ozi.h  position.h  radius.h  random.h  resample.h  reverse_route.h  shape.h  skytraq.h  smplrout.h  (+12 more)
lib/: shp.lib  strptime.lib  z.lib
